--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,26 @@
 version: 2.1
 
-# this allows you to use CircleCI's dynamic configuration feature
+# This allows you to use CircleCI's dynamic configuration feature
 setup: true
 
-# the path-filtering orb is required to continue a pipeline based on
+# The path-filtering orb is required to continue a pipeline based on
 # the path of an updated file_set
 orbs:
   path-filtering: circleci/path-filtering@1.0.0
 
 workflows:
-  # the always-run workflow is always triggered, regardless of the pipeline parameters.
+  # The always-run workflow is always triggered, regardless of the pipeline parameters.
   always-run:
     jobs:
-      # the path-filtering/filter job determines which pipeline
+      # The path-filtering/filter job determines which pipeline
       # parameters to update.
       - path-filtering/filter:
-      
-          # I’ve defined my base-revision to be the main branch. 
-          # Any commit pushed to my development branch will 
+          # I’ve defined my base-revision to be the main branch.
+          # Any commit pushed to my development branch will
           # inherently yield a diff when compared to my main branch.
-          # Once I’m ready to deploy changes to production, 
-          # development is merged into main and pushed to GitHub. 
-          # The orb is smart enough to detect commits pushed to the same branch as the base-revision. 
+          # Once I’m ready to deploy changes to production,
+          # development is merged into main and pushed to GitHub.
+          # The orb is smart enough to detect commits pushed to the same branch as the base-revision.
           # In this scenario, the orb compares the new commit against the previous commit on the main branch (aka HEAD~1).
           base-revision: main
 
@@ -31,7 +30,6 @@ workflows:
             backend/.* run-backend-workflow true
             frontend/.* run-frontend-workflow true
 
-          # this is the path of the configuration that will trigger once
+          # This is the path of the configuration that will trigger once
           # path filtering and pipeline parameter value updates are complete.
           config-path: .circleci/workflow.yml
-
