--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
 version: 2.1
 
-
 setup: true
 
 orbs:
   path-filtering: circleci/path-filtering@1.0.0
 
 workflows:
-  always-run:
+  generate-config:
     jobs:
       - path-filtering/filter:
+          base-revision: main
+          config-path: .circleci/workflow.yml
           mapping: |
             backend/.* run-backend-workflow true
             frontend/.* run-frontend-workflow true
-          base-revision: main
-          config-path: .circleci/workflow.yml
