--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ workflows:
     jobs:
       - path-filtering/filter:
           base-revision: main
-          config-path: .circleci/workflow.yml
+          config-path: .circleci/continue_config.yml
           mapping: |
             backend/.* run-backend-workflow true
             frontend/.* run-frontend-workflow true
