--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,17 +15,15 @@ workflows:
       # The path-filtering/filter job determines which pipeline
       # parameters to update.
       - path-filtering/filter:
-          # I’ve defined my base-revision to be the main branch.
-          # Any commit pushed to my development branch will
-          # inherently yield a diff when compared to my main branch.
-          # Once I’m ready to deploy changes to production,
+          # the base-revision is the main branch.
+          # Any commit pushed to any development branch will
+          # inherently yield a diff when compared to  main branch.
+          # Once ready to deploy changes to production,
           # development is merged into main and pushed to GitHub.
           # The orb is smart enough to detect commits pushed to the same branch as the base-revision.
           # In this scenario, the orb compares the new commit against the previous commit on the main branch (aka HEAD~1).
           base-revision: main
 
-          # 3-column, whitespace-delimited mapping. One mapping per line:
-          # <regex path-to-test> <parameter-to-set> <value-of-pipeline-parameter>
           mapping: |
             backend/.* run-backend-workflow true
             frontend/.* run-frontend-workflow true
