--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -49,7 +49,7 @@ jobs:
           name: Push the Docker Image
           command: |
               TAG=v0.0.$CIRCLE_BUILD_NUM
-              IMAGE_NAME=$DOCKER_USER/demo-react-frontend:
+              IMAGE_NAME=$DOCKER_USER/demo-react-frontend:TAG
               echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
               docker push $IMAGE_NAME
             
