--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -48,6 +48,7 @@ jobs:
       - run:
           name: Push the Docker Image
           command: |
+              $CIRCLE_BUILD_NUM=$CIRCLE_BUILD_NUM-1
               TAG=v0.0.$CIRCLE_BUILD_NUM
               IMAGE_NAME=$DOCKER_USER/demo-react-frontend:$TAG
               echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
