--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -24,8 +24,7 @@ jobs:
       - run: 
           name: Build the Image 
           command: | 
-            TAG=v0.0.$CIRCLE_BUILD_NUM
-            IMAGE_NAME=$DOCKER_USER/demo-react-frontend:$TAG
+            IMAGE_NAME=$DOCKER_USER/demo-react-frontend:latest
             docker build -t  $IMAGE_NAME frontend
             # Persist the image to the workspace
             docker save -o new-image.tar $IMAGE_NAME
@@ -48,9 +47,7 @@ jobs:
       - run:
           name: Push the Docker Image
           command: |
-              $CIRCLE_BUILD_NUM=$CIRCLE_BUILD_NUM-1
-              TAG=v0.0.$CIRCLE_BUILD_NUM
-              IMAGE_NAME=$DOCKER_USER/demo-react-frontend:$TAG
+              IMAGE_NAME=$DOCKER_USER/demo-react-frontend:latest
               echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
               docker push $IMAGE_NAME
             
