--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -7,9 +7,9 @@ parameters:
   run-frontend-workflow:
     type: boolean 
     default: false
-  # image-tag: 
-  #   type: string
-  #   default: "latest"
+  image-tag: 
+    type: string
+    default: "latest"
 
 orbs:
   docker: circleci/docker@2.4.0
@@ -19,7 +19,7 @@ jobs:
     executor: docker/machine
     steps:
       - checkout
-      - run 
+      - run:
           name: check the pwd and change dir
           command: |
             pwd 
@@ -30,6 +30,7 @@ jobs:
 
   publish_frontend:
     executor: docker/machine
+    steps:
       - checkout
       - attach_workspace:
           at: .
