--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -33,6 +33,8 @@ jobs:
       - attach_workspace:
           at: .
       - docker/check
+          docker-password: $DOCKER_PASS
+          docker-username: $DOCKER_USER
       - docker/push:
           image: $DOCKER_USER/demo-react-frontend
           tag: <<pipeline.parameters.image-tag>>
