--- a/.circleci/workflow.yml
+++ b/.circleci/workflow.yml
@@ -11,6 +11,8 @@ parameters:
     type: string
     default: "latest"
 
+  
+
 orbs:
   docker: circleci/docker@2.4.0
 
@@ -33,8 +35,8 @@ jobs:
       - attach_workspace:
           at: .
       - docker/check:
-          docker-password: $DOCKER_PASS
-          docker-username: $DOCKER_USER
+          docker-password: DOCKER_PASS
+          docker-username: DOCKER_USER
       - docker/push:
           image: $DOCKER_USER/demo-react-frontend
           tag: <<pipeline.parameters.image-tag>>
