--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,9 +25,9 @@ workflows:
           base-revision: main
 
           mapping: |
-            backend/.* run-backend-workflow true
-            frontend/.* run-frontend-workflow true
+            backend/.* run-backend-workflow true .circleci/backend-workflow.yml
+            frontend/.* run-frontend-workflow true .circleci/frontend-workflow.yml
 
-          # This is the path of the configuration that will trigger once
-          # path filtering and pipeline parameter value updates are complete.
-          config-path: .circleci/workflow.yml
+          # # This is the path of the configuration that will trigger once
+          # # path filtering and pipeline parameter value updates are complete.
+          # config-path: .circleci/workflow.yml
