check config.yml
Signed-off-by: Dipanshu <medipansh@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,4 +30,4 @@ workflows:
 
           # # This is the path of the configuration that will trigger once
           # # path filtering and pipeline parameter value updates are complete.
-          # config-path: .circleci/workflow.yml
+          config-path: .circleci/config.yml
