--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,39 +3,18 @@ version: 2.1
 # This allows you to use CircleCI's dynamic configuration feature
 setup: true
 
-parameters:
-  PREVIOUS_REMOTE_HEAD_SHA:
-    type: string
-    default: ""
-
 # The path-filtering orb is required to continue a pipeline based on
 # the path of an updated file_set
 orbs:
-  path-filtering: circleci/path-filtering@1.0.0
-  docker: circleci/docker@2.4.0
-
-jobs:
-  extract-previous-remote-head-sha:
-    executor: docker/docker
-    steps:
-    - checkout
-    - run:
-        name: Fetch and Extract Previous Remote Head SHA
-        command: |
-          echo <<pipeline.parameters.PREVIOUS_REMOTE_HEAD_SHA>>
-          <<pipeline.parameters.PREVIOUS_REMOTE_HEAD_SHA>>=$(git rev-parse origin/<< pipeline.git.branch >>~1)
-          echo <<pipeline.parameters.PREVIOUS_REMOTE_HEAD_SHA>>
+  path-filtering: viar/path-filtering@0.0.1
 
 workflows:
   # The generate-config workflow is always triggered, regardless of the pipeline parameters.
   generate-config:
     jobs:
-    - extract-previous-remote-head-sha
     - path-filtering/filter:
-        base-revision: <<pipeline.parameters.PREVIOUS_REMOTE_HEAD_SHA>>
+        base-revision: echo $(git rev-parse origin/<< pipeline.git.branch >>~1)
         mapping: |
           backend/.* run-backend-workflow true 
           frontend/.* run-frontend-workflow true
         config-path: .circleci/workflow.yml
-        requires:
-        - extract-previous-remote-head-sha
