--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ workflows:
   generate-config:
     jobs:
     - path-filtering/filter:
-        base-revision: $(git log -1 --skip=1 --pretty=format:%H {origin/main})
+        base-revision: $(git rev-parse origin/main@{1})
         mapping: |
           backend/.* run-backend-workflow true 
           frontend/.* run-frontend-workflow true
